# Galaxy-Network

./: CMakeLists.txt  config.py
include/Galaxy-Network/: archive.hpp  basic.hpp  client.hpp  communicating.hpp  decl.hpp  message.hpp  serial.hpp  server.hpp
include/gal/net/: barrier.hpp  client.hpp  communicating.hpp  decl.hpp  except.hpp  message.hpp  server.hpp
include/gal/net/atchive/: archive.hpp
src/Galaxy-Network/: basic.cpp  client.cpp  communicating.cpp  message.cpp  server.cpp
src/gal/net/: client.cpp  communicating.cpp  message.cpp  server.cpp
test/: CMakeLists.txt
test/chat/: CMakeLists.txt  main.cpp
test/chat_client/: CMakeLists.txt
test/chat_client/src/: main.cpp
test/chat_server/: CMakeLists.txt  main.cpp
test/chat_server/src/: main.cpp
